--- a/.github/workflows/workflow3.yml
+++ b/.github/workflows/workflow3.yml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   test:
+    if: ${{ github.event.pull_request.merged }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
