--- a/.github/workflows/workflow3.yml
+++ b/.github/workflows/workflow3.yml
@@ -15,12 +15,16 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+        with:
+          node-version: '20'  # Aquí establece la versión de Node.js a 20
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+        env:
+          NODE_VERSION: '20'  # Establece la versión de Node.js en el entorno
 
       - name: Build and push Docker image
         run: |
@@ -28,14 +32,18 @@ jobs:
           docker push poweer02/nitflex:${{ github.sha }}
 
       - name: Azure Login
-        uses: azure/login@v2
+        uses: azure/login@v1
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       - name: Deploy to Azure
-        run: |
-          az webapp deployment container config --name PoweeR02 --resource-group ais-group --docker-custom-image-name poweer02/nitflex:${{ github.sha }}
-          az webapp restart --name PoweeR02 --resource-group ais-group
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: PoweeR02
+          slot-name: production
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+        env:
+          NODE_VERSION: '20'  # Establece la versión de Node.js en el entorno
 
       - name: Smoke Test
         run: |
