--- a/.github/workflows/workflow3.yml
+++ b/.github/workflows/workflow3.yml
@@ -10,6 +10,13 @@ jobs:
     if: ${{ github.event.pull_request.merged }}
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+          
       - name: Checkout repository
         uses: actions/checkout@v4
 
