--- a/.github/workflows/workflow3.yml
+++ b/.github/workflows/workflow3.yml
@@ -6,7 +6,7 @@ on:
     types: [closed]
 
 jobs:
-  test:
+  build:
     if: ${{ github.event.pull_request.merged }}
     runs-on: ubuntu-latest
     steps:
@@ -16,7 +16,7 @@ jobs:
         with:
           distribution: 'temurin'
           java-version: '17'
-          
+
       - name: Checkout repository
         uses: actions/checkout@v4
 
@@ -30,3 +30,27 @@ jobs:
  
       - name: Push image to DockerHub
         run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/anuncios:${{ github.sha }}
+    
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: 'Az CLI login'
+        uses: azure/login@v2
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+      - name: 'Run az commands to deploy container'
+        run: |
+          az container create \
+          --resource-group ${{ secrets.AZURE_GROUP }} \  
+          --name anuncios \  
+          --image ${{ secrets.DOCKERHUB_USERNAME }}/anuncios:latest \  
+          --dns-name-label ais-anuncios \  
+          --ports 8080  
+      
+
+
+
+      
