--- a/.github/workflows/workflow3.yml
+++ b/.github/workflows/workflow3.yml
@@ -5,6 +5,10 @@ on:
     branches: [main]
     types: [closed]
 
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   build:
     if: ${{ github.event.pull_request.merged }}
