--- a/.github/workflows/workflow3.yml
+++ b/.github/workflows/workflow3.yml
@@ -25,12 +25,10 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Generate Docker image
-        run: mvn spring-boot:build-image -DskipTests
-          -Dspring-boot.build-image.imageName=${{ secrets.DOCKERHUB_USERNAME }}/anuncios:${{ github.sha }}
+        run: mvn spring-boot:build-image -DskipTests -Dspring-boot.build-image.imageName=${{ secrets.DOCKERHUB_USERNAME }}/anuncios:${{ github.sha }}
  
       - name: Login to DockerHub
-        run: docker login
-          -u "${{ secrets.DOCKERHUB_USERNAME }}" -p "${{ secrets.DOCKERHUB_TOKEN }}"
+        run: docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" -p "${{ secrets.DOCKERHUB_TOKEN }}"
  
       - name: Push image to DockerHub
         run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/anuncios:${{ github.sha }}
@@ -53,4 +51,4 @@ jobs:
           --name anuncios \
           --image ${{ secrets.DOCKERHUB_USERNAME }}/anuncios:latest \
           --dns-name-label ais-anuncios \
-          --ports 8080   
+          --ports 8080
