--- a/.github/workflows/workflow3.yml
+++ b/.github/workflows/workflow3.yml
@@ -1,9 +1,7 @@
 name: CI Workflow 3
 
 on:
-  pull_request:
-    branches: [main]
-    types: [closed]
+  workflow_dispatch:
 
 permissions:
   id-token: write
