--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,11 @@
 			<version>4.18.1</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.5.13</version> <!-- o la versión más reciente disponible -->
+		</dependency>		
 	</dependencies>
 
 	<build>
