--- a/.github/workflows/workflow3.yml
+++ b/.github/workflows/workflow3.yml
@@ -54,6 +54,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: deploy
     steps:
-      - name: 'Run smoke test'
+      - name: Run smoke test
         run: |
+          cd $GITHUB_WORKSPACE
           mvn -Dhost=URL_DE_LA_APLICACION test
