--- a/.github/workflows/workflow3.yml
+++ b/.github/workflows/workflow3.yml
@@ -50,6 +50,10 @@ jobs:
           --dns-name-label ais-anuncios \
           --ports 8080
 
+  smoke_test:
+    runs-on: ubuntu-latest
+    needs: deploy
+    steps:
       - name: Run smoke test
         run: |
             mvn -Dhost=http://ais-anuncios.westeurope.azurecontainer.io:8080 test
