--- a/.github/workflows/workflow3.yml
+++ b/.github/workflows/workflow3.yml
@@ -54,6 +54,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: deploy
     steps:
+      - name: Change to project directory
+        run: cd ais-d.garciac-m.dediego-2024-ghf
+      
       - name: Run smoke test
         run: |
           mvn -Dhost=http://ais-anuncios.westeurope.azurecontainer.io:8080 test
