--- a/.github/workflows/workflow3.yml
+++ b/.github/workflows/workflow3.yml
@@ -54,6 +54,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: deploy
     steps:
+      - name: List contents of current directory
+        run: ls -la
+
       - name: Change to project directory
         run: cd ais-d.garciac-m.dediego-2024-ghf
       
