--- a/.github/workflows/workflow3.yml
+++ b/.github/workflows/workflow3.yml
@@ -54,10 +54,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: deploy
     steps:
-
-      - name: Change to project directory
-        run: cd https://github.com/PoweeR02/ais-d.garciac-m.dediego-2024-ghf
       
       - name: Run smoke test
         run: |
-          mvn -Dhost=http://ais-anuncios.westeurope.azurecontainer.io:8080 test
+          mvn test -P smoke
