--- a/.github/workflows/workflow3.yml
+++ b/.github/workflows/workflow3.yml
@@ -54,10 +54,12 @@ jobs:
     runs-on: ubuntu-latest
     needs: deploy
     steps:
-      
-      - name: Standard Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'adopt'
+          java-version: '17'
 
       - name: Run smoke test
-        run: |
-          mvn -Dhost=http://ais-anuncios.westeurope.azurecontainer.io:8080 test
+        run: mvn -Dhost=http://ais-anuncios.westeurope.azurecontainer.io:8080 -Dtest=smoke test
