--- a/.github/workflows/workflow3.yml
+++ b/.github/workflows/workflow3.yml
@@ -62,5 +62,5 @@ jobs:
           java-version: '17'
 
       - name: Run smoke test
-        run: mvn -Dhost=http://ais-anuncios.westeurope.azurecontainer.io:8080/ -Dtest=SmokeTest test
+        run: mvn -Dhost=ais-anuncios.westeurope.azurecontainer.io test -Dtest=SmokeTest 
         
