--- a/.github/workflows/workflow4.yml
+++ b/.github/workflows/workflow4.yml
@@ -1,8 +1,11 @@
 name: CI Workflow 4
 
 on:
-  schedule:
-    - cron: "0 0 * * *" 
+  workflow_dispatch
+
+##on:
+  ##schedule:
+    ##- cron: "0 0 * * *" 
 
 jobs:
   system-tests:
